# local-llm-cli

./: .envrc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py
.claude/: CLAUDE.md
.cursor/rules/: agent-workflow.mdc
app/: __init__.py  __main__.py  cli.py  generation.py  model.py
tests/: test_generation_unit.py
tests/integration/: test_cli_smoke.py
